--- a/style.css
+++ b/style.css
@@ -88,5 +88,53 @@ span.hero-second {
     height: 300px;
     width: 700px;
     object-fit: cover;
+}
 
+/* RECTANGLE 1 */
+.content1 p{
+    text-align: center;
+    font-weight: 800;
+    font-size: 36px;
+}
+.content1 div.four-squares{
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+    justify-content: center;
+}
+.content1 div.square-content{
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+}
+.content1 div.square{
+    width: 150px;
+    height: 150px;
+    border-style: solid;
+    border-color: #3882f6;
+    border-radius: 15px;
+}
+.content1 div.square-text{
+    text-align: center;
+    font-size: 18px;
+}
+
+/* RECTANGLE 2 */
+.content2{
+    background-color: #e5e7eb;
+}
+/* RECTANGLE 3 */
+
+/* FOOTER */
+#footer{
+    bottom: 0;
+    width: 100%;
+    height: 5rem;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#footer div.copyright{
+    color: #e5e7eb;
 }
